<resources>
    <string name="app_name">Weather App</string>
    <string name="show_weather">Показать погоду</string>
    <string name="input_city">Введите название города или индекс</string>
    <string name="radiobutton">Сегодня</string>
    <string name="radiobuttonTommorow">Завтра</string>
    <string name="radiobuttonAfterTommorow">%s</string>
    <string name="radiobutton2AfterTommorow">%s</string>
    <string name="radiobutton3AfterTommorow">%s</string>
    <string name="buttonExtra">Дополнительная информация</string>
    <string name="not_date">not date</string>
    <string name="nightweather">NightWeather</string>
    <string name="evningweather">EvningWeather</string>
</resources>